@@ -6,5 +6,8 @@ address. However, this will only work when the Postfix mail server is being
 used and if the <tt>sender_bcc_maps</tt> directive is set in its
 <tt>main.cf</tt> file. <p>
 
+If Postfix also has the <tt>recipient_bcc_maps</tt> directive set, you will
+also have the option to set an address for BCCing incoming messages. <p>
+
 <footer>
 
